# affective_ai_videos

./: .gitignore  A20641C3.tmp  README.md  ai_prompts.xlsx  descriptions_dump.txt  environment.yml  error_log.txt  prompts_dump.txt  pyproject.toml  ~$ai_prompts.xlsx
analysis/: epss_limb_pairs.csv  epss_limb_roster.csv  epss_limb_screening_visual.csv  epss_limb_selection.csv
dataset/: README.md  stimuli_index.csv
dataset/E01_corte_pepino/: E01_meta.json
dataset/E02_lapiz_punzante_dorso/: E02_meta.json
dataset/E05_quemadura_fosforo_antebrazo/: E05_meta.json
dataset/E06_aplastamiento_taco_pie/: E06_meta.json
dataset/E07_inyeccion_codo/: E07_meta.json
dataset/E09_corte_tijera_dedos/: E09_meta.json
dataset/E11_inyeccion_muneca/: E11_meta.json
docs/: 00_ESTRUCTURA.md  01_stimulus_selection.md  02_image_generation.md  03_video_generation.md  04_content_moderation.md  05_validation.md  PLAYBOOK_GENERACION.md  README.md  methodology.md
scripts/: adapt_image.py  align_start_look.py  create_mask.py  derive_variant.py  epss_merge.py  epss_roster.py  epss_select.py  extract_frames.py  finalize_frames.py  generate_neutral_inpainting.py  generate_poc.py  generate_pov_img.py  generate_ref_img.py  generate_start_img.py  generate_video.py  inpaint_patch.py  inspect_epss.py  new_stimulus.py  pilot_v1.py  run_videos.py  seal_endframe.py  start_variants.py  stimulus.py
scripts/_archive/: README.md  control_test_jan_method.py  migrate_to_dataset.py  pilot_epss_keyframes.py  test_flux_dev_explicit.py  test_flux_dev_open.py  test_imminent_threat.py  test_safety_filter.py
(+2 files in other folders)
