[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pain-stimuli"
version = "0.1.0"
description = "Generación de estímulos visuales de dolor mediante IA generativa"
requires-python = ">=3.11"
dependencies = [
    "fal-client",
    "requests>=2.31.0",
    "openpyxl>=3.1.2",
    "numpy==1.26.4",
    "pandas==2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W"]
